--- a/templates/index.html
+++ b/templates/index.html
@@ -4,27 +4,97 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Recommendation System</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../static/main.js"></script>
+
+    <style>
+        body{
+            background-color: #00031e;
+            color: #eee;
+        }
+        .top{
+            border-bottom: 12px dotted #f8e8c1;
+            margin-bottom: 30px;
+            padding-bottom: 30px;
+        }
+        .search-bar-div{
+            width: 40%;
+            margin: auto;
+        }
+        #movie-search{
+            border-radius: .25rem .25rem 0 0 !important;
+            background-color: #fff6e0;
+        }
+        #suggestions{
+            background-color: #fff6e0;
+            position: absolute;
+            width: 40%;
+            border-radius: 0 0 .25rem .25rem !important;
+            z-index: 999;
+        }
+        .choice{
+            color: #00031e;
+            text-transform: capitalize;
+            padding: 0 0.75rem;
+
+        }
+        .card{
+            max-width: 25%;
+            margin: auto !important;
+        }
+        .card-title{
+            color: #EB4642;
+            text-transform: uppercase;
+            text-align: center;
+            font-weight: bold;
+        }
+        .card-body{
+            background: #050724;
+        }
+    </style>
 </head>
 <body>
-    <h1>Movie Recommendation System</h1>
-    <form method="POST" id="search-form">
-        <label for="movie-search">Search for a movie:</label>
-        <input type="text" id="movie-search" name="movie_search" autocomplete="off">
-        <div id="suggestions"></div>
-        <br>
-        <input type="submit" value="Get Recommendations" id="tet">
-        <!-- Hidden input field to store chosen movie titles -->
-        <input type="hidden" id="chosen-movies" name="chosen_movies">
-    </form>
+    <div class="top">
+        <div class="text-center ">
+            <img src="../static/images/logo.png" width="300px">
+        </div>
+        
+        
+        <div class="search-bar-div">
+            <h6 class="text-center">Add up to 5 movies</h6>
+            <div class="input-group">
+                <input type="text" id="movie-search" name="movie_search" class="form-control" placeholder="Search for a movie.." autocomplete="off">
+            </div>
+            <div id="suggestions"></div>
+        </div>
+       
+        
+    </div>
+    
+    
+    
 
-    <div>
+    <!-- <div>
         <h2>Chosen:</h2>
         <div id="chosen">
 
         </div>
+    </div> -->
+
+    <div class="container-fluid">
+        <div class="card-deck">
+        </div>
     </div>
+
+    <form method="POST" id="search-form" class="text-center">
+        <br>
+        <input type="submit" value="Get Recommendations" id="tet" class="btn btn-dark">
+        <!-- Hidden input field to store chosen movie titles -->
+        <input type="hidden" id="chosen-movies" name="chosen_movies">
+    </form>
 
     <div>
         <div id="recommendations">
