--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,10 @@
 
     <style>
         body{
-            background-color: #00031e;
+            background-color: #10101b;
+            background-image: radial-gradient(circle, rgba(255, 255, 255, 0.1) 1px, transparent 1px), radial-gradient(circle, rgba(255, 255, 255, 0.1) 1px, transparent 1px);
+    background-size: 20px 20px, 20px 20px;
+    background-position: 0 0, 10px 10px;
             color: #eee;
         }
         .top{
@@ -43,7 +46,7 @@
         }
         .card{
             max-width: 25%;
-            margin: auto !important;
+            /* margin: auto !important; */
         }
         .card-title{
             color: #EB4642;
@@ -84,7 +87,7 @@
         </div>
     </div> -->
 
-    <div class="container-fluid">
+    <div class="container">
         <div class="card-deck">
         </div>
     </div>
